--- a/TestGMaps/TestGMaps.iOS/TestGMaps.iOS.csproj
+++ b/TestGMaps/TestGMaps.iOS/TestGMaps.iOS.csproj
@@ -25,7 +25,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>x86_64</MtouchArch>
-    <MtouchLink>None</MtouchLink>
+    <MtouchLink>Full</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
@@ -128,11 +128,14 @@
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>3.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Build.Download">
+      <Version>0.10.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\TestGMaps\TestGMaps.csproj">
-      <Project>{C47EFBC7-D035-4745-9123-05A752C7F107}</Project>
+      <Project>{AAE420F6-A59C-4FFE-AD4A-C6B99941693D}</Project>
       <Name>TestGMaps</Name>
     </ProjectReference>
   </ItemGroup>
