--- a/TestGMaps/TestGMaps.iOS/TestGMaps.iOS.csproj
+++ b/TestGMaps/TestGMaps.iOS/TestGMaps.iOS.csproj
@@ -128,8 +128,8 @@
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>3.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Build.Download">
-      <Version>0.10.0</Version>
+    <PackageReference Include="Xamarin.Google.iOS.Maps">
+      <Version>3.7.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
